# plaitime

./: .gitignore  README.md  pai.py  prompt.md  pyproject.toml
src/pai/: __init__.py  character_bar.py  chat_window.py  config_dialog.py  data_classes.py  data_models.py  generator.py  main.py  memory_system.py  message_widget.py  top_bar.py  typing_indicator.py  util.py
src/plaitime/: __init__.py  character_bar.py  character_widget.py  chat_widget.py  chat_window.py  config_dialog.py  data_models.py  generator.py  io.py  main.py  main_window.py  message_widget.py  parser.py  session_bar.py  text_edit.py  util.py
src/plaitime/assets/: plaitime.xcf
tests/: test_config_dialog.py  test_io.py  test_parse.py  test_remove_last_sentence.py  test_rename.py  test_util.py
